jlamontSC-test/src/objects/Account_Strategy__c.object
<CustomObject>
    <description>Tracks Major Climate Account Strategies</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Strategies</relationshipLabel>
        <relationshipName>Account_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the currently Active strategy?</description>
        <inlineHelpText>Is this the currently Active strategy?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>522</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>